# WatoContiRadarCollaboration

./: README.md
ars430_ros_publisher/: .gitignore  CMakeLists.txt  README.md  package.xml
ars430_ros_publisher/include/: parser.h  processPacket.h  radarPublisher.h  resMultipliers.h  sniffer.h
ars430_ros_publisher/launch/: radarROSbag.launch
ars430_ros_publisher/msg/: RadarDetection.msg  RadarPacket.msg  SensorStatus.msg
ars430_ros_publisher/rviz/: radarPointCloud.rviz
ars430_ros_publisher/scripts/: EthCfgRx.py
ars430_ros_publisher/src/: FilteredMain.cpp  PointCloudConverter.cpp  UnfilteredMain.cpp  parser.cpp  processPacket.cpp  radarPublisher.cpp  sniffer.cpp
rosbags/: 20m_to_10m_from_radar.bag  2m_diamater_circle_15m_away.bag  side_to_side_movement.bag
